objects/copado__Sprint__c.object
<CustomObject>
    <description>If a project is broken down into multiple sprints this object should be used.</description>
    <fields>
        <fullName>copado__Actual_Velocity__c</fullName>
        <inlineHelpText>This value is calculated by adding up the total planned points of the user stories in the sprint when their status is changed to Completed. This status can be configured in the Actual Velocity Statuses custom metadata type. Please refer to the Copado Sprint Velocity article for more information.</inlineHelpText>
        <label>Actual Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Days_in_sprint__c</fullName>
        <label>Days in sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Full_time_resources_in_sprint__c</fullName>
        <label>Full time resources in sprint</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__InitialPlannedVelocity__c</fullName>
        <inlineHelpText>Calculated when the Sprint status is changed to In Progress by adding up the points assigned to all User Stories in the Sprint. This value is only calculated once at the beginning of a Sprint.</inlineHelpText>
        <label>Initial Planned Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Objective__c</fullName>
        <label>Sprint Goal</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Velocity__c</fullName>
        <inlineHelpText>This value is recalculated with every change made to the Planned Points or Planned Points Other assigned to all the user stories in the sprint or when new user stories are added.</inlineHelpText>
        <label>Planned Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Story_points__c</fullName>
        <label>Total Capacity (Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Working_Days_Left__c</fullName>
        <formula>IF(copado__End_Date__c &lt; TODAY(), 0,  IF(TODAY()&lt;copado__Start_Date__c , (CASE(MOD( copado__Start_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( copado__End_Date__c - copado__Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( copado__End_Date__c - copado__Start_Date__c )/7)*5)), (CASE(MOD( TODAY() - DATE(1985,6,24),7),
0 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( copado__End_Date__c - TODAY() ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( copado__End_Date__c - TODAY() )/7)*5))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Working_days_in_sprint__c</fullName>
        <label>Working days in sprint</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Connect_log__c</fullName>
        <label>Connect log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadoconnect__Last_Synced_Date__c</fullName>
        <label>Last Synced Date</label>
        <type>DateTime</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Working_Days_Left__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Team__c</columns>
        <columns>copado__Project__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>copado__Objective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__EndDate_Should_be_Greater_than_StartDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(OR(ISCHANGED(copado__End_Date__c),ISCHANGED(copado__Start_Date__c)), copado__End_Date__c &lt;= copado__Start_Date__c), true, false)</errorConditionFormula>
        <errorMessage>You must introduce an End Date greater than the Start Date.</errorMessage>
    </validationRules>
</CustomObject>